added cat-file and hash-object command

--- a/random_projects/git_clone/Makefile
+++ b/random_projects/git_clone/Makefile
@@ -1,15 +1,16 @@
 # Variables
 CC = gcc
 CFLAGS = -Wall -Wextra -Iinclude -w  # Include the directory where exercise.h is located
+LDFLAGS = -lz -lcrypto
 TARGET = git_clone
-SRC_FILES = hash_table.c ini_parser.c repository.c utils.c bridges.c main.c
+SRC_FILES = hash_table.c ini_parser.c repository.c utils.c bridges.c git_object.c main.c
 
 # Build target
 all: $(TARGET)
 
 # Compile the source files (main.c, exercise.c, munit.c) into the TARGET executable
 $(TARGET): $(SRC_FILES)
-	$(CC) $(CFLAGS) -o $(TARGET) $(SRC_FILES)
+	$(CC) $(CFLAGS) -o $(TARGET) $(SRC_FILES) $(LDFLAGS)
 
 # Clean target (removes the executable)
 clean:
