added dynamic array to hash tables and made the kvlm parser and the log command but there are a lot of memory leaks

--- a/random_projects/git_clone/Makefile
+++ b/random_projects/git_clone/Makefile
@@ -3,7 +3,7 @@ CC = gcc
 CFLAGS = -Wall -Wextra -Iinclude -w  # Include the directory where exercise.h is located
 LDFLAGS = -lz -lcrypto
 TARGET = git_clone
-SRC_FILES = hash_table.c ini_parser.c repository.c utils.c bridges.c git_object.c main.c
+SRC_FILES = hash_table.c dynamic_array.c ini_parser.c repository.c utils.c bridges.c git_object.c kvlm.c main.c
 
 # Build target
 all: $(TARGET)
