added tag command must there are memory bugs

--- a/random_projects/git_clone/Makefile
+++ b/random_projects/git_clone/Makefile
@@ -1,6 +1,6 @@
 # Variables
 CC = gcc
-CFLAGS = -Wall -Wextra -Iinclude -w  # Include the directory where exercise.h is located
+CFLAGS = -Wall -Wextra -Iinclude -w
 LDFLAGS = -lz -lcrypto
 TARGET = git_clone
 SRC_FILES = hash_table.c dynamic_array.c ini_parser.c repository.c utils.c bridges.c git_object.c kvlm.c tree_parser.c refs.c main.c
