added index file parsing and ls-files command

--- a/random_projects/git_clone/Makefile
+++ b/random_projects/git_clone/Makefile
@@ -2,8 +2,9 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -Iinclude -w
 LDFLAGS = -lz -lcrypto
+MATH = -lm
 TARGET = git_clone
-SRC_FILES = hash_table.c dynamic_array.c ini_parser.c repository.c utils.c bridges.c git_object.c kvlm.c tree_parser.c refs.c main.c
+SRC_FILES = hash_table.c dynamic_array.c ini_parser.c repository.c utils.c bridges.c git_object.c kvlm.c tree_parser.c refs.c git_index.c main.c
 GDB = -g
 
 # Build target
@@ -11,7 +12,7 @@ all: $(TARGET)
 
 # Compile the source files (main.c, exercise.c, munit.c) into the TARGET executable
 $(TARGET): $(SRC_FILES)
-	$(CC) $(CFLAGS) -o $(TARGET) $(SRC_FILES) $(LDFLAGS) $(GDB)
+	$(CC) $(CFLAGS) -o $(TARGET) $(SRC_FILES) $(LDFLAGS) $(MATH) $(GDB)
 
 # Clean target (removes the executable)
 clean:
